build: init commitizen

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,13 @@ dependencies = [
 [tool.hatch.build.targets.wheel]
 packages = ["src/ynab_import"]
 
+
+[tool.commitizen]
+name = "cz_conventional_commits"
+tag_format = "$version"
+version_scheme = "pep440"
+version_provider = "uv"
+update_changelog_on_bump = true
 [project.scripts]
 ynab-import = "ynab_import.cli.menus:main_menu"
 
