--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [main, staging]
+    branches: [main] # Only run on main branch pushes
   pull_request:
-    branches: [main, staging]
+    branches: [main] # Only run on PRs to main (staging → main)
 
 jobs:
   test:
@@ -27,7 +27,9 @@ jobs:
         run: uv python install ${{ matrix.python-version }}
 
       - name: Install dependencies
-        run: uv sync --dev
+        run: |
+          uv sync --dev --all-extras
+          uv pip install -e .
 
       - name: Lint with ruff
         run: |
@@ -62,7 +64,9 @@ jobs:
         run: uv python install 3.12
 
       - name: Install dependencies
-        run: uv sync --dev
+        run: |
+          uv sync --dev --all-extras
+          uv pip install -e .
 
       - name: Build package
         run: uv build
