fix(ci): restore pyright type checking and resolve dependency issues
- Fix CI release workflow: use `--extra dev` flag for twine check to properly access dev dependencies - Add pandas-stubs>=2.0.0 to dev dependencies to resolve
missing type stub warnings - Fix questionary type annotation in ask_with_menu function to accept Separator objects - Restore pyright configuration in
pyproject.toml to silence type stub warnings in editors - Add pyright>=1.1.380 to dev dependencies and restore type checking step in CI workflow - Update CI
build job to use correct twine check command with dev dependencies

Resolves type checking issues and CI release failures while maintaining clean development experience.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,9 @@ jobs:
           uv run ruff check .
           uv run ruff format --check .
 
+      - name: Type check with pyright
+        run: uv run pyright
+
       - name: Test with pytest
         run: uv run pytest --cov=ynab_import --cov-report=xml
 
@@ -69,7 +72,7 @@ jobs:
         run: uv build
 
       - name: Check package
-        run: uv run twine check dist/*
+        run: uv run --extra dev twine check dist/*
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
