--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,8 @@ dev = [
     "build>=1.0.0",
     "twine>=4.0.0",
     "commitizen>=3.0.0",
+    "pandas-stubs>=2.0.0",
+    "pyright>=1.1.380",
 ]
 
 [tool.hatch.build.targets.wheel]
@@ -86,6 +88,11 @@ version_provider = "pep621"
 update_changelog_on_bump = true
 major_version_zero = true
 bump_message = "bump: version $current_version → $new_version"
+
+[tool.pyright]
+reportMissingTypeStubs = false
+reportUnknownVariableType = "none"
+reportUnknownMemberType = "none"
 
 [tool.ruff]
 line-length = 88
