fix(ci): restructure workflows for tag-based CI and release pipeline
- Update CI workflow to trigger on version tags (from staging) and PRs to main - Update release workflow to trigger on version tags merged to main - Restore
main branch verification in release workflow - Remove redundant staging-to-main.yml workflow - Fix GitHub release creation to use existing tag instead of
creating new one

Implements proper flow: version bump on staging → CI runs → merge to main → release runs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,10 @@ name: CI
 
 on:
   push:
-    branches: [main] # Only run on main branch pushes
+    tags:
+      - "v*" # Run on version tags (from staging)
   pull_request:
-    branches: [main] # Only run on PRs to main (staging → main)
+    branches: [main] # Run on PRs to main (staging → main)
 
 jobs:
   test:
