--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,11 +37,8 @@ jobs:
           uv run ruff check .
           uv run ruff format --check .
 
-      - name: Type check with pyright
-        run: uv run pyright
-
       - name: Test with pytest
-        run: uv run pytest --cov=ynab_import --cov-report=xml
+        run: uv run pytest --cov=src/ynab_import --cov-report=xml
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
