--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,7 +61,7 @@ dev = [
     "twine>=4.0.0",
     "commitizen>=3.0.0",
     "pandas-stubs>=2.0.0",
-    "pyright>=1.1.380",
+    "pre-commit>=3.0.0",
 ]
 
 [tool.hatch.build.targets.wheel]
@@ -88,11 +88,6 @@ version_provider = "pep621"
 update_changelog_on_bump = true
 major_version_zero = true
 bump_message = "bump: version $current_version → $new_version"
-
-[tool.pyright]
-reportMissingTypeStubs = false
-reportUnknownVariableType = "none"
-reportUnknownMemberType = "none"
 
 [tool.ruff]
 line-length = 88
