test: add version tests and show CLI version
Add comprehensive version tests display/handle the tool
version the CLI and package metadata. Key changes- tests/test_version: add unit and tests to
  get_version(), __version semantic format of the  version string, CLI --version/- output, and a when
  lookup raises an exception.
- src/ynab_import/__init__.py: replace hardcoded version with
  importlib.metadata/importlib_metadata lookup and fall back to a
  safe hardcoded version ("0.5.0") when package metadata is
  unavailable.
- src/ynab_import/cli/menus.py: import argparse and get_version(),
  print the package version under the ASCII banner, and add a
  simple argument parser to handle --version/-v to print the
  version non-interactively.
- .pre-commit-config.yaml: simplify pytest entry to run in CI
  environment.

These changes ensure the application exposes a reliable version
string, is test-covered, and supports both interactive and
non-interactive version queries.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -123,3 +123,9 @@ markers = [
     "unit: marks tests as unit tests",
     "integration: marks tests as integration tests",
 ]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.2",
+    "pytest-cov>=7.0.0",
+]
