--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,7 +10,7 @@ repos:
     hooks:
       - id: pytest
         name: pytest
-        entry: uv run --no-sync pytest --tb=short
+        entry: uv run pytest --tb=short
         language: system
         pass_filenames: false
         always_run: true
