fix(csv): improve delimiter detection and error handling for problematic CSV files
- Implement count-based delimiter detection with semicolon preference
- Add multi-strategy CSV parsing with fallback to lenient mode  
- Handle UTF-8 BOM encoding and inconsistent field counts gracefully
- Use 'on_bad_lines=warn' to skip malformed rows instead of failing
- Enhance error messages for CSV parsing failures
- Suppress expected pandas ParserWarning in test output

Fixes parsing issues with semicolon-delimited files and files with 
inconsistent field counts (e.g., "Expected 3 fields, saw 5" errors).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -117,6 +117,9 @@ line-ending = "auto"
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
+filterwarnings = [
+    "ignore::pandas.errors.ParserWarning",
+]
 markers = [
     "csv: marks tests as CSV-related (deselect with '-m \"not csv\"')",
     "excel: marks tests as Excel-related (deselect with '-m \"not excel\"')",
